# noah_windows

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
include/: common.h  cross_platform.h  debug.h  fs.h  mm.h  mm.hpp  noah.h  proc.h  syscall.h  types.h  vm.h
include/linux/: common.h  const.h  errno.h  fs.h  misc.h  signal.h  socket.h
include/util/: list.h  misc.h  tree.h
include/x86/: vm.h  vmx.h
lib/libhypervisor/include/: vmm.h  vmm_prot.h
lib/libhypervisor/src/: haxm.h  vmm_ahf.c  vmm_win_haxm.cpp
lib/libhypervisor/test/: boot_longmode.c
src/: base.c  base.cpp  conv.c  conv_darwin.c  conv_darwin.cpp  conv_windows.cpp  debug.c  debug.cpp  main.c  main.cpp  meta_strace.c  meta_strace.cpp  vmm.c  vmm.cpp
src/fs/: darwinfs.c  darwinfs.cpp  fs.c  fs.cpp
src/mm/: malloc.c  mm.c  mm.cpp  mmap.c  mmap.cpp
src/platform/darwin/mm/: mmap.c  mmap.cpp
src/platform/windows/mm/: mmap.cpp
src/platform/windows/proc/: fork.cpp
src/proc/: exec.c  exec.cpp  fork.c  fork.cpp  process.c  process.cpp  ptrace.c
src/sys/: time.cpp
test/: CMakeLists.txt  test.mk  test.rb
test/include/: noah.h  test_assert_nolibc.h
test/test_assertion/: test_fork_nolibc.c  test_nested_fork_nolibc.c
test/test_stdout/: fork_nolibc.c  hello_nolibc.c
